--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -4,24 +4,60 @@
 }
 
 .alert {
-	margin-bottom: 1em !important;
+	margin-bottom: 1em $i;
 }
 
 .heatmap-high {
-	color: #fe7a15 !important;
+	color: #fe7a15 $i;
 }
 .heatmap-med {
-	color: #cf7721 !important;
+	color: #cf7721 $i;
 }
 .heatmap-low {
-	color: #9b764f !important;
+	color: #9b764f $i;
 }
 .heatmap-high a {
-	color: #fe7a15 !important;
+	color: #fe7a15 $i;
 }
 .heatmap-med a {
-	color: #cf7721 !important;
+	color: #cf7721 $i;
 }
 .heatmap-low a {
-	color: #9b764f !important;
+	color: #9b764f $i;
+}
+
+section.post-actions {
+	padding-top: 0.25em;
+}
+
+.post-action {
+	margin-right: 0;
+	margin-left: 0.25em;
+}
+
+@media (max-width: 400px) {
+	#main-outlet {
+		padding-right: 0;
+		padding-left: 0;
+	}
+
+	.topic-meta-data {
+		position: relative;
+		padding: calc(0.75em - 4px) 0.5em calc(0.75em + 43px) 0.5em $i;
+	}
+
+	.topic-meta-data .post-info:not(.edits) {
+		margin-right: 0;
+	}
+
+	.names .new_user a,
+	.names .user-title,
+	.names .user-title a {
+		font-size: 90%;
+	}
+
+	.post-info.edits + a.reply-to-tab {
+		bottom: 5px;
+		right: 0.5em $i;
+	}
 }
